# crewai_trip_planning

./: README.md  pyproject.toml  requirements.txt
blobs/: crew.py  report.md
src/crewai_trip_planning/: crew.py  main.py
src/crewai_trip_planning/blobs/: report.md
src/crewai_trip_planning/config/: agents.yaml  tasks.yaml
